arreglar metodo jdk